# AnyClaude

./: .gitignore  AGENTS.md  ARCHITECTURE.md  CHANGELOG.md  Cargo.toml  DESIGN.md  README.md  justfile
crates/mvi/: Cargo.toml
crates/mvi/src/: lib.rs
crates/term_clipboard/: Cargo.toml
crates/term_clipboard/src/: lib.rs  mac.rs
crates/term_clipboard/tests/: in_memory.rs  mac_smoke.rs
crates/term_core/: Cargo.toml
crates/term_core/examples/: dump.rs
crates/term_core/src/: attrs.rs  color.rs  emulator.rs  grid.rs  lib.rs  parser.rs
crates/term_core/tests/: emulator_smoke.rs  mouse_protocol.rs  parser_smoke.rs  reflow.rs  scrollback_evict.rs
crates/term_gpu/: Cargo.toml
crates/term_gpu/examples/: layout_demo.rs  render_term.rs  scroll_demo.rs  term_grid.rs
crates/term_gpu/src/: atlas.rs  input.rs  instances.rs  label.rs  lib.rs  panel_render.rs  paste.rs  pipeline.rs  renderer.rs  scroll.rs  selection.rs  text.rs
crates/term_gpu/src/shaders/: prim.wgsl  roundrect.wgsl  shadow.wgsl  text.wgsl
crates/term_gpu/tests/: atlas.rs  key_encode.rs  mouse_encode.rs
crates/term_input/: Cargo.toml
crates/term_input/src/: event.rs  lib.rs  macos_modifiers.rs  parser.rs  reader.rs
crates/term_layout/: Cargo.toml
crates/term_layout/src/: lib.rs
crates/term_layout/tests/: basic.rs  close.rs  drag_divider.rs  hit_test.rs  resize.rs  split.rs
crates/term_ui/: Cargo.toml
crates/term_ui/examples/: coordinator.rs  toy.rs
crates/term_ui/src/: anim.rs  arena.rs  geometry.rs  id.rs  layout.rs  lib.rs  modifier.rs  paint.rs  splice.rs  text_helpers.rs  view.rs
crates/term_ui/tests/: anim.rs  block_shadow.rs  caret_helpers.rs  layout_overlay.rs  modifier.rs  overlay_alpha.rs  r4_reconcile_identity.rs
crates/uikit/: Cargo.toml
crates/uikit/src/: chrome.rs  edge_toggle.rs  lib.rs  popup.rs
crates/uikit/tests/: chrome_bars.rs  popup_list.rs
docs/: THINKING_MODES_DESIGN.md  THINKING_TRANSFORMER_ARCHITECTURE.md  error-handling-design.md  gpu-terminal-spec.md  graceful_shutdown_design.md  pluggable-architecture-design.md  pluggable-architecture-implementation.md  subagent-backend-spec.md
docs/analysis/: terminal-emulator-comparison.md  warp-rendering-research.md  warp-vt-parser-research.md
docs/articles/: README.md
docs/articles/warp-gpu-terminal/: outline.md  quotes-and-numbers.md  research-notes.md  timeline.md
docs/design/: agent-team-routing.md  agent-teams-integration.md  debug-mode-request-logging.md  env-injection-claude-code.md  error-handling-timeouts.md  gpu-terminal-scroll.md  graceful-shutdown.md  ipc-layer.md  multi-instance-panels.md  observability-infrastructure.md  settings-menu.md  term-ui-design.md  thinking-block-compat.md  thinking-pipeline-isolation.md  tool-context-preservation.md  wire-all-components.md
examples/: chrome_preview.rs
src/: clipboard.rs  error.rs  lib.rs  main.rs  shutdown.rs  sse.rs
src/args/: env_builder.rs  pipeline.rs
src/backend/: mod.rs  state.rs
src/config/: auth.rs  credentials.rs  loader.rs  mod.rs  store.rs  types.rs  watcher.rs
src/ipc/: client.rs  layer.rs  mod.rs  server.rs  tests.rs  types.rs
src/metrics/: aggregator.rs  debug_logger.rs  hub.rs  mod.rs  plugin.rs  redaction.rs  request_parser.rs  response_parser.rs  ring.rs  span.rs  stream.rs  types.rs
src/proxy/: connection.rs  error.rs  health.rs  hooks.rs  mod.rs  model_rewrite.rs  pool.rs  router.rs  routing.rs  server.rs  shutdown.rs  thinking.rs  timeout.rs  tracing.rs  upstream.rs
src/proxy/pipeline/: forward.rs  mod.rs  routing.rs
src/proxy/thinking/: context.rs  error.rs  mod.rs  native.rs  registry.rs  request_structure_tests.rs  strip.rs  summarize.rs  summarizer.rs  traits.rs
src/pty/: command.rs  handle.rs  manager.rs  mod.rs  resize.rs  session.rs  spawn_config.rs
src/shim/: claude.rs  mod.rs  tmux.rs
src/ui/: app.rs  app_state.rs  chrome_labels.rs  events.rs  footer.rs  header.rs  input.rs  layout.rs  mod.rs  panel_anim.rs  panel_manager.rs  panels_view.rs  popup_anim.rs  popup_view.rs  render.rs  runtime.rs  term_geometry.rs  terminal.rs  terminal_guard.rs  theme.rs
src/ui/backend_switch/: actor.rs  dialog.rs  intent.rs  mod.rs  reducer.rs  state.rs
src/ui/components/: mod.rs  popup.rs
src/ui/gpu/: app.rs  backends.rs  bootstrap.rs  chrome.rs  diagnostic.rs  mod.rs  overlay.rs  popup.rs  pty.rs  session.rs  text.rs  timers.rs
src/ui/gpu/app/: clipboard.rs  events.rs  geometry.rs  mod.rs  popups.rs  render.rs  session_ops.rs
src/ui/history/: actor.rs  dialog.rs  intent.rs  mod.rs  reducer.rs  state.rs
src/ui/pty/: actor.rs  intent.rs  mod.rs  reducer.rs  state.rs
src/ui/settings/: actor.rs  intent.rs  mod.rs  reducer.rs  state.rs
src/ui/summarization/: dialog.rs  intent.rs  reducer.rs  state.rs
tests/: app_lifecycle.rs  app_startup.rs  app_state.rs  args_pipeline.rs  backend_state.rs  backend_switch.rs  chrome_labels.rs  chrome_view.rs  cli_args.rs  clipboard.rs  concurrent_port_binding.rs  config_auth.rs  config_credentials.rs  config_loader.rs  e2e_workflow.rs  error_registry.rs  history.rs  history_actor.rs  history_reducer.rs  history_state.rs  input.rs  integration_health.rs  ipc.rs  metrics_stream.rs  panel_anim.rs  panel_manager.rs  pipeline_integration.rs  pipeline_isolation.rs  pipeline_stages.rs  popup_anim.rs  popup_view_backend.rs  popup_view_history.rs  popup_view_reconcile.rs  popup_view_settings.rs  proxy_backend_switch.rs  proxy_error.rs  proxy_pool.rs  proxy_retry.rs  proxy_streaming.rs  proxy_timeout.rs  (+26 more)
tests/common/: mod.rs
