[workspace]
members = [".", "crates/mvi", "crates/term_gpu", "crates/term_core", "crates/term_layout", "crates/term_clipboard"]

[workspace.lints.rust]
dead_code = "deny"
unused_imports = "deny"
unreachable_code = "deny"

[package]
name = "anyclaude"
version = "0.5.0"
edition = "2021"

[features]
default = []

[lints]
workspace = true

[dependencies]
# PTY (spawned by the GPU UI's ChildPty).
portable-pty = "0.9"

# MVI primitives — backbone of every popup state machine.
mvi = { path = "crates/mvi" }

# GPU UI stack.
term_gpu = { path = "crates/term_gpu" }
term_core = { path = "crates/term_core" }
term_clipboard = { path = "crates/term_clipboard" }
winit = "0.30"
# Scroll plumbing: glam::Vec2 backs ScrollVelocity, futures + futures-timer
# drive the momentum tick loop without polling.
glam = "0.30"
futures = "0.3"
futures-timer = "3"

# Async runtime
tokio = { version = "1", features = ["macros", "rt-multi-thread", "io-util", "signal", "time"] }
uuid = { version = "1.23", features = ["v4"] }

# HTTP Proxy
axum = { version = "0.8", features = ["json"] }
http-body-util = "0.1"
reqwest = { version = "0.13", default-features = false, features = ["json", "stream", "rustls", "http2", "gzip", "brotli", "deflate"] }
tower = "0.5"
futures-core = "0.3"

# CLI
clap = { version = "4", features = ["derive"] }

# Config
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "1.1"
dirs = "6.0"
thiserror = "2.0"
fs2 = "0.4"

# Concurrency
parking_lot = "0.12"

# Utilities
scopeguard = "1.2"
libc = "0.2"

# Error handling
anyhow = "1.0.102"

# Temporary files
tempfile = "3.27"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
panic = "abort"
