[package]
name = "term_core"
version = "0.1.0"
edition = "2021"
description = "Minimal VT/ANSI parser and fixed-cell terminal grid for AnyClaude's GPU terminal. Zero external dependencies — only std. See docs/gpu-terminal-spec.md §4."

[lints]
workspace = true

# No dependencies. Intentional — the parser is hand-rolled (Paul Williams
# state machine) and the grid is plain Vec<Cell>. See
# docs/analysis/warp-vt-parser-research.md §5 for the locked-in decision.
