[package]
name = "term_gpu"
version = "0.1.0"
edition = "2021"
description = "GPU-accelerated terminal renderer for AnyClaude. Phase 3.5 prototype validates pixel-based scroll with momentum (see docs/design/gpu-terminal-scroll.md)."

[lints]
workspace = true

[dependencies]
wgpu = "24"
winit = "0.30"
futures = "0.3"
futures-timer = "3"
glam = "0.30"
pollster = "0.4"
cosmic-text = "0.14"

[dev-dependencies]
# term_core is only used by the `render_term` example to wire raw ANSI
# bytes through a VT emulator into the GPU renderer. Not a runtime
# dependency — term_gpu the library knows nothing about VT parsing.
term_core = { path = "../term_core" }
# term_layout is only used by the `layout_demo` example to visualise the
# BSP tree as coloured panels. Same rationale — not a runtime dep.
term_layout = { path = "../term_layout" }
# portable-pty is only used by the `term_grid` example to spawn a real
# shell PTY per panel. Not a runtime dep — term_gpu doesn't know about
# processes either.
portable-pty = "0.9"
# term_clipboard backs the `term_grid` example's Cmd+C / Cmd+V flow.
# Not a runtime dep — term_gpu has no clipboard story of its own.
term_clipboard = { path = "../term_clipboard" }

[[example]]
name = "scroll_demo"
path = "examples/scroll_demo.rs"

[[example]]
name = "render_term"
path = "examples/render_term.rs"

[[example]]
name = "layout_demo"
path = "examples/layout_demo.rs"

[[example]]
name = "term_grid"
path = "examples/term_grid.rs"
